[metadata]
name = grafana-client
friendly_name = Grafana client
description = A client library for accessing the Grafana HTTP API, written in Python
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
author = Andrew Prokhorenkov
author_email = andrew.prokhorenkov@gmail.com
maintainer = Andreas Motl
maintainer_email = andreas.motl@panodata.org
copyright = Copyright 2017-2020 Andrew Prokhorenkov <andrew.prokhorenkov@gmail.com>
url = https://github.com/tfitter1/grafana-client
project_urls =
    Source = https://github.com/tfitter1/grafana-client
    Tracker = https://github.com/tfitter1/grafana-client/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Information Technology
    Intended Audience :: Manufacturing
    Intended Audience :: Science/Research
    Intended Audience :: System Administrators
    Intended Audience :: Telecommunications Industry
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Communications
    Topic :: Database
    Topic :: Internet
    Topic :: Internet :: WWW/HTTP
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Human Machine Interfaces
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Archiving
    Topic :: System :: Networking :: Monitoring
    Topic :: Utilities
    Operating System :: MacOS
    Operating System :: OS Independent
    Operating System :: POSIX
    Operating System :: Unix
keywords = grafana http api grafana-client grafana-api http-client grafana-utils grafana-automation grafana-toolbox

[options]
use_scm_version = True
python_requires = >=3.7
packages = [options]
packages =
    grafana_client
    grafana_client.elements
    grafana_client.elements._async
    grafana_client.elements.admin
    grafana_client.elements.alerting
    grafana_client.elements.alertingprovisioning
    grafana_client.elements.annotations
    grafana_client.elements.base
    grafana_client.elements.dashboard
    grafana_client.elements.dashboard_versions
    grafana_client.elements.datasource
    grafana_client.elements.folder
    grafana_client.elements.health
    grafana_client.elements.libraryelement
    grafana_client.elements.notifications
    grafana_client.elements.organization
    grafana_client.elements.plugin
    grafana_client.elements.rbac
    grafana_client.elements.search
    grafana_client.elements.service_account
    grafana_client.elements.snapshots
    grafana_client.elements.team
    grafana_client.elements.user
    grafana_client.elements._async.admin
    grafana_client.elements._async.alerting
    grafana_client.elements._async.alertingprovisioning
    grafana_client.elements._async.annotations
    grafana_client.elements._async.dashboard
    grafana_client.elements._async.dashboard_versions
    grafana_client.elements._async.datasource
    grafana_client.elements._async.folder
    grafana_client.elements._async.health
    grafana_client.elements._async.libraryelement
    grafana_client.elements._async.notifications
    grafana_client.elements._async.organization
    grafana_client.elements._async.plugin
    grafana_client.elements._async.rbac
    grafana_client.elements._async.search
    grafana_client.elements._async.service_account
    grafana_client.elements._async.snapshots
    grafana_client.elements._async.team
    grafana_client.elements._async.user
include_package_data = True
zip_safe = False
setup_requires =
    setuptools-scm<9
py_modules = ssl, media, share, myenv, config, backup, addons, addon_configs, homeassistant

# https://setuptools.pypa.io/en/latest/userguide/dependency_management.html#platform-specific-dependencies
install_requires =
    niquests>=3.4.0,<4
    importlib-metadata;python_version<='3.7'
    verlib2<0.4

[options.extras_require]
test =
    parameterized>=0.8,<1
    codecov<3
    coverage[toml]<8
    unittest-xml-reporting<4
    requests-mock<2

develop =
    build<2
    poethepoet<1
    pip-review<2  # Use `pip-review --local --interactive` to upgrade outdated packages.
    ruff<0.12;python_version>='3.7'
    twine<7


[options.packages.find]
where = .
exclude = test

[tool.setuptools_scm]
local_scheme = no-local-version
version_scheme = python-simplified-semver
write_to = grafana_client/version.py

[coverage:run]
omit =
    # omit anything generated / mirror to sync code
    grafana_client/elements/_async
